* Fix Incident Timeline * Change Empty Search Option widget label from "None" -> "Unknown" * Remove header row from spreadsheets as requested by ADPC as it makes sorting/filtering the spreadsheet harder - is this required by any other users? Wouldn't this info be better in the filename? IFRC: * Fix wrapping of breadcrumbs DRRPP * Fix Footer * Show diffferent report value on charts (name NOT id) * ‘Parent Project’ - change to the wording used in current site * Improve the layout of Add Organization *  alternative colors for Forms * Stretch 3 latest projects out when logged in Remove Cook Islands from Search * Show Cook Island fields if ONLY Cook Islands is selected * Fix Cook Island fields for read * Change datatables to show 10 instead of 25 to improve loading time

--- a/static/themes/IFRC/menu.css
+++ b/static/themes/IFRC/menu.css
@@ -94,6 +94,9 @@
 .breadcrumbs ul li a.highlight:after {
     content: "";
 }
+.breadcrumbs ul li a.highlight {
+    white-space:nowrap;
+}
 
 /* Dashboard */
 #dashboard {
